# riichi_advanced

./: .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  INSTALL.md  README.md  documentation.md  flake.nix  formatter.py  mix.exs
.github/workflows/: deploy.yml
assets/: package-lock.json  package.json
assets/css/: app.css
assets/js/: app.js  safe_diff_worker.js
config/: config.exs  dev.exs  prod.exs  test.exs
documentation/: TEST_american.md  WIP_base.md  WIP_siamese.md  Zansanma.md  american.md  base.md  bloody30faan.md  chinitsu_challenge.md  documentation.md  documentation_json.md  fuzhou.md  galaxy.md  guide_to_jokers.md  guide_to_tiles.md  hk.md  kansai.md  mahjongscript.md  mcr.md  mods.md  riichi.md  sanma.md  sichuan.md  tiles.md  tutorials.md  vietnamese.md  zung_jung.md
lib/: riichi_advanced.ex  riichi_advanced_web.ex
lib/ex_jq/: jq.ex
lib/ex_smt/: bit_vector.ex  solver.ex  variable.ex
lib/riichi_advanced/: admin.ex  ai_player.ex  ai_supervisor.ex  application.ex  cache.ex  constants.ex  ets_cache.ex  exit_monitor.ex  game_session_supervisor.ex  game_state.ex  game_state_actions.ex  game_state_buttons.ex  game_state_scoring.ex  game_supervisor.ex  global_state.ex  lobby_state.ex  (+13 more)
log/: .gitignore
native/riichiadvanced_match/: Cargo.toml  README.md
native/riichiadvanced_match/src/: encode.rs  lib.rs  match.rs  match_bipartite.rs  match_dfs.rs  match_elim.rs  match_info.rs  n_rooks.rs  offsets.rs  primes.rs  profile.rs  tile_table.rs  tileset.rs  types.rs  utils.rs  waits.rs
test/: test_helper.exs
(+759 files in other folders)
